2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_inotify.c: (gam_inotify_mask_to_gam_file_event),
	(gam_inotify_mask_to_gam_dir_event),
	(gam_inotify_process_event_queue), (gam_inotify_remove_all_for): Add some
	comments and refactor some code.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_conf.c: (gam_conf_read): Fix build.
	* server/gam_inotify.c: (gam_inotify_process_event_queue),
	(gam_inotify_read_handler), (gam_inotify_init), (g_timeval_lt),
	(t_timeval_eq): Process the inotify event queue in a timer. Add GTimeVal
	comparision predicates. This is the beginning of pairing move events
	together.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_connection.c: (gam_connection_new): Change event queue flush
	to 100 ms.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* doc/config.html:
	* doc/gamin.html: Update documentation

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_poll.c: (node_add_subscription),
	(node_remove_subscription), (gam_poll_delist_node),
	(gam_poll_relist_node), (gam_poll_flowon_node),
	(gam_poll_flowoff_node), (poll_file), (gam_poll_scan_callback),
	(gam_poll_first_scan_dir):
	* server/gam_server.c: (gam_add_subscription),
	(gam_remove_subscription):

	Consider fsset options when deciding between kernel/poll/none
	subscription options.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* server/gam_conf.c: (gam_conf_string_to_mon_type),
	(gam_conf_read_internal), (gam_conf_read):
	Make poll timeout value optional, read in /etc/gamin/gaminrc, then
	~/.gaminrc, finally /etc/gamin/mandatory_gaminrc.
	* server/gam_fs.c: (gam_fs_set): Use GAMIN_POLL_DEFAULT when passed -1 for
	poll_timeout.

2005-08-05  John McCutchan  <ttb@tentacle.dhs.org>

	* libgamin/gam_api.c: (gamin_check_cred):
	* server/gam_channel.c: (gam_client_conn_check_cred),
	(gam_client_create):
	* server/gam_dnotify.c: (gam_dnotify_debug):