@@ -1,3 +1,8 @@
+Mon Aug  8 23:15:45 CEST 2005 Daniel Veillard <veillard@redhat.com>
+
+	* server/local_inotify_syscalls.h: applied patch fixing compilation
+	  on ppc, alpha and sparc, fixes bug #312934 though incomplete list
+
 2005-08-08  John McCutchan  <ttb@tentacle.dhs.org>
 
 	* server/gam_inotify.c: (gam_inotify_mask_to_gam_file_event),
